# xprite-editor

./: .gitignore  .gitmodules  .travis.yml  .travisignore  1.ase  Cargo.toml  README.md  Web.toml  azure-pipelines.yml  backup.ase
config/: xprite.toml
config/palettes/: 15P DX.hex  2-bit Grayscale.hex  20P DX.hex  24P DX.hex  3-bit RGB.hex  30 Color.hex  6-bit RGB.hex  A64.hex  AAP-16.hex  AAP-64.hex  AAP-Micro12.hex  AAP-RadiantXV.hex  AAP-Splendor128.hex  ARQ16.hex  Acid 15.hex  Afternoon.hex  Ammo-8.hex  Amstrad CPC.hex  Andrew Kensler 16.hex  Andrew Kensler 32.hex  Andrew Kensler 54.hex  Apple II.hex  Arcade Standard 29.hex  Armor 8.hex  Arne 16.hex  Arne 32.hex  Arne 4.hex  Arq4.hex  Artifice Machine 22.hex  Atapki-Baby32.hex  Aurora.hex  Autum15 (yellow).hex  Autum15.hex  Axol15.hex  BLK 36.hex  Banana Split.hex  Battery24.hex  BigPotato 22.hex  Blessing.hex  BoomBoom.hex  (+217 more)
doc/: book.toml
font/: Cargo.toml
font/src/: main.rs
libtexsyn/: Cargo.toml
libtexsyn/src/: common.rs  distance.rs  errors.rs  lib.rs
libtexsyn/src/generators/: mod.rs
libtexsyn/src/generators/patch/: mod.rs  quilt.rs
libtexsyn/src/generators/per_pixel/: mod.rs  search.rs
native/: Cargo.toml  tree
native/assets/: button.ase
native/src/: consts.rs  hotkey.rs  main.rs  prelude.rs  state.rs
native/src/render/: cairo.rs  clipboard.rs  imgui.rs  imgui_cairo.rs  imgui_cairo_renderer.rs  mod.rs  run.rs  run2.rs
native/src/render/glium_renderer_support/: mod.rs
native/src/state/: brush_state.rs  exporter_state.rs  filepopup_state.rs  mod.rs  palette_window.rs  preview_window.rs
native/src/ui/: brush.rs  canvas.rs  console.rs  exporter.rs  file_manager.rs  frames.rs  inputs.rs  layers.rs  menu.rs  mod.rs  palette.rs  preview.rs  settings.rs  symmetry.rs  tool_panel.rs  toolbar.rs
native/src/ui/tools/: autoshade_panel.rs  ellipse_panel.rs  eraser_panel.rs  line_panel.rs  marquee_panel.rs  mod.rs  paintbucket_panel.rs  pencil_panel.rs  rect_panel.rs  settings_panel.rs  symmetry_panel.rs  texture_panel.rs  vector_panel.rs
notebook/: Reumann-Witkam.ipynb  Untitled.ipynb  monotone tangents.ipynb
notebook/.ipynb_checkpoints/: palette-checkpoint.ipynb  perimeter-checkpoint.ipynb
rectdecomp/: Cargo.toml
rectdecomp/src/: lib.rs
rerast-rules/: imgui_to_0.2.1.rs
sample_files/: 1.ase  font.aseprite
scripts/: bezier.py  common.py  fish.py  kdtree.py  main.dyon  maze.py  munching_squares.py  render.dyon  render.py  shading.py  subdiv.py  test.dyon  test.py  tiling.py  tree.py  xpr.dyon
src/: canvas.rs  direction.rs  main.rs  snake.rs
src/xprite/: block.rs  brush.rs  canvas.rs  color.rs  history.rs  mod.rs  pixel.rs  prelude.rs  stroke.rs  toolbox.rs  xprite.rs
src/xprite/common/: brush.rs  color.rs  geom.rs  mod.rs  path.rs  pixel.rs  pixels.rs  polyline.rs  sorter.rs
src/xprite/lib/: brush.rs  geom.rs  mod.rs  pixel.rs  pixels.rs
src/xprite/lib/algorithms/: line.rs  mod.rs  path.rs  pixel_perfect.rs  polyline.rs  sorter.rs
src/xprite/tools/: line.rs  mod.rs  paint_bucket.rs  pencil.rs
src/xprite/tools/pencil/: mod.rs
static/: demo-interp.html  index.html  sorter.html
web/: Cargo.toml
web/src/: main.rs  stdweb_renderer.rs
web/static/: demo-interp.html  index.html
xprite/: Cargo.toml  download_palettes.py
xprite-native/: Cargo.toml
xprite-native/src/: consts.rs  hotkey.rs  main.rs  prelude.rs  state.rs
xprite-native/src/render/: imgui_cairo_renderer.rs  imgui_renderer.rs  mod.rs  run.rs
xprite-native/src/support/: mod.rs
xprite-native/src/ui/: canvas.rs  draw.rs  inputs.rs  layers.rs  menu.rs  mod.rs  palette.rs  tool_panel.rs  toolbar.rs
xprite-native/src/ui/tools/: mod.rs  paintbucket_panel.rs  pencil_panel.rs
xprite-wasm/: Cargo.toml
xprite-web/: Cargo.toml
xprite-web/src/: main.rs  stdweb_renderer.rs
xprite-web/static/: demo-sorter.html
xprite/src/: brush.rs  color.rs  geom.rs  history.rs  input.rs  lib.rs  pixels.rs  prelude.rs  toolbox.rs  xprite.rs
xprite/src/algorithms/: autoshade.rs  connected_components.rs  deprecated_pixel_perfect.rs  ellipse.rs  floodfill.rs  line.rs  mod.rs  path.rs  perimeter.rs  pixel_perfect.rs  polygon.rs  polyline.rs  rect.rs  rotsprite.rs  selective_antialias.rs  sorter.rs  symmetry.rs
xprite/src/core/: brush.rs  color.rs  exporter.rs  frames.rs  geom.rs  history.rs  hotkey.rs  input.rs  mod.rs  outline.rs  palette.rs  pixels.rs  toolbox.rs  xprite.rs
xprite/src/layer/: layer.rs  layers.rs  mod.rs
xprite/src/rendering/: canvas.rs  image_renderer.rs  mod.rs  traits.rs
xprite/src/scripting/: mod.rs  xpr.dyon
xprite/src/scripting/dyon/: mod.rs
xprite/src/scripting/python/: mod.rs  xpr_module.rs
xprite/src/tools/: autoshade.rs  color_picker.rs  ellipse.rs  eraser.rs  line.rs  marquee.rs  mod.rs  paint_bucket.rs  pencil.rs  rect.rs  symmetry.rs  texture.rs  traits.rs  vector.rs
