[package]
name = "xprite-font"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
# cmdline
clap = "2.32.0"
# logging
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

[dependencies.xprite]
path = "../xprite"
default-features = false

[dependencies.bdf]
version = "0.5.5"
path = "../../rust-bdf"