[package]
name = "xprite-native"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
imgui = "0.0.21"
glium = { version = "0.22", default-features = true }
imgui-glium-renderer = "0.0.21"

# cmdline
clap = "2.32.0"
# logging
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

# rendering
cairo-rs = { version = "0.5.0", optional = true }

[dependencies.xprite]
path = "../xprite"
default-features = false
features = ["python-scripting"]

[features]
default = ["python-scripting"]
cairo-renderer = ["cairo-rs"]
dyon-scripting = []
python-scripting = []