[package]
name = "xprite-native"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
glium = { version = "0.23", default-features = true }
imgui = { version = "0.0.22-pre", path = "../imgui-rs" }
imgui-glium-renderer = { version = "0.0.22-pre", path = "../imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { version = "0.0.22-pre", path = "../imgui-rs/imgui-winit-support" }

# cmdline
clap = "2.32.0"
# logging
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"

# rendering
cairo-rs = { version = "0.5.0", optional = true }
# lyon = "*"


[dependencies.xprite]
path = "../xprite"
default-features = false
features = ["python-scripting"]

[features]
default = ["python-scripting"]
cairo-renderer = ["cairo-rs"]
dyon-scripting = []
python-scripting = []

# [dev-dependencies]
# image = "0.20"
