[package]
name = "xprite-native"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
glium = { version = "0.25", default-features = true }
imgui = { version = "0.1.0" }
imgui-glium-renderer = { version = "0.1.0" }
imgui-winit-support = { version = "0.1.0" }
clipboard = "0.5"

# cmdline
clap = "2.32.0"
# logging
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"


[dependencies.xprite]
path = "../xprite"
default-features = false
# features = ["python-scripting"]
features = []

[features]
# default = ["python-scripting"]
default = []
python-scripting = []
