[package]
name = "xprite"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
libtexsyn = { path = "../libtexsyn" }
chrono = "0.4"
image = "0.20.1"
# saving/loading
bincode = "1.0.1"
serde_derive = "1.0.82"
serde = "1.0.82"
hex = "0.3.2"
natord = "1.0.9"


[dependencies.indexmap]
version = "1.0.2"
features = ["serde-1"]

[dependencies.dyon]
version = "0.39.0"
default-features = false
features = []
optional = true

[dependencies.pyo3]
version = "0.5.2"
optional = true

[features]
default = []
python-scripting = ["pyo3"]
dyon-scripting = ["dyon"]
