[package]
name = "xprite"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
indexmap = {version="1.0.2", features=["serde-1"]}
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
libtexsyn = { path = "../libtexsyn" }
chrono = "0.4"
image = "0.20.1"
pyo3 = { version = "0.5.2", optional = true }
# saving/loading
bincode = "1.0.1"
serde_derive = "1.0.82"
serde = "1.0.82"
hex = "0.3.2"
natord = "1.0.9"
fnv = "1.0.6"
bitflags = "1.0.4"

ase = { path = "../ase-rs" }

[features]
default = []
python-scripting = ["pyo3"]
