[package]
name = "xprite"
version = "0.1.0"
authors = ["Ricky Han <rickylqhan@gmail.com>"]
edition = "2018"

[dependencies]
indexmap = {version="1.0.2", features=["serde-1"]}
fern = "0.5.6"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
image = "0.21"
imageproc = "0.18"
pyo3 = { version = "0.5.2", optional = true }
hex = "0.3.2"
palette = "0.4.1"
natord = "1.0.9"
fnv = "1.0.6"
bitflags = "1.0.4"
wfc_image = { version = "0.9.0", path = "../../wfc/wfc-image" }

ase = { path = "../ase-rs" }

[features]
default = []
python-scripting = ["pyo3"]
